# UniversityCHomework

./: .gitignore  README.md
.github/workflows/: build-and-lint.yml
HW1-ArraySwap/src/: main.c
HW1-LuckyTickets/src/: main.c
HW1-Multiplication/src/: main.c
HW1-Quotient/src/: main.c
HW2-CountNulls/src/: main.c
HW2-Parenthesis/src/: main.c
HW2-SubstringCounter/src/: main.c
HW3/InsertionSort/src/: README.md  insertionSort.s  main.c
HW4/: CMakeLists.txt
HW4/ParenthesesBalance/: CMakeLists.txt
HW4/ParenthesesBalance/src/: main.c
HW4/ShuntingYard/: CMakeLists.txt
HW4/ShuntingYard/src/: main.c
HW4/modules/: CMakeLists.txt
HW4/modules/queue/: queue.c  queue.h
HW4/modules/stack/: stack.c  stack.h
HW5/rhyme/circularList/: circularList.c  circularList.h
HW5/rhyme/src/: main.c
HW5/sortingList/list/: list.c  list.h
HW5/sortingList/src/: main.c  test.c
HW7/BinaryRepresentation/: Makefile  main.c
HW7/BinaryRepresentation/include/: logic.h
HW7/BinaryRepresentation/src/: logic.c
HW7/BinaryRepresentation/tests/: tests.c
HW7/DoubleToExponential/: Makefile  main.c
HW7/DoubleToExponential/include/: doubleToExponential.h
HW7/DoubleToExponential/src/: doubleToExponential.c
HW7/DoubleToExponential/tests/: tests.c
test1/fibonacci/src/: main.c
test1/maxSum/src/: main.c
test1/selectionSort/src/: main.c
test2/bitComparison/: Makefile  main.c
test2/bitComparison/include/: bitComparison.h
test2/bitComparison/src/: bitComparison.c
test2/bitComparison/tests/: testBitComparison.c
test2/queue/: Makefile  main.c
(+3 files in other folders)
